[package]
name = "dns-stamp-parser"
version = "2.0.0"
authors = ["LinkTed <link.ted@mailbox.org>", "Evan Cameron <cameron.evan@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
description = "Libary to encode and decode DNS stamps"
readme = "README.md"
repository = "https://github.com/LinkTed/dns-stamp-parser"
keywords = ["doh", "dns", "stamps", "dnscrypt"]
categories = ["parser-implementations", "encoding"]

[badges]
travis-ci = { repository = "LinkTed/dns-stamp-parser" }

[dependencies]
data-encoding = "2.2.1"
bitflags = "1.2.1"
thiserror = "1.0.20"
trust-dns-resolver = { version = "0.19", optional = true }

[features]
default = []
resolve = ["trust-dns-resolver"]