[package]
name = "dns-stamp-parser"
version = "3.0.1"
authors = ["LinkTed <link.ted@mailbox.org>", "Evan Cameron <cameron.evan@gmail.com>"]
license = "BSD-3-Clause"
edition = "2018"
description = "Libary to encode and decode DNS stamps"
readme = "README.md"
repository = "https://github.com/LinkTed/dns-stamp-parser"
keywords = ["doh", "dns", "stamps", "dnscrypt"]
categories = ["parser-implementations", "encoding"]

[dependencies]
base64 = "0.22"
bitflags = "2"
thiserror = "1"
trust-dns-resolver = { version = "0.23", optional = true }

[features]
default = []
resolve = ["trust-dns-resolver"]
